--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				</div>
 			</footer>
 		</section>
-		<script src="//cdn.jsdelivr.net/pouchdb/3.2.0/pouchdb.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/pouchdb/3.2.0/pouchdb.min.js"></script>
 		<script src="js/app.js"></script>
 	</body>
 </html>
